--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
-		<link rel="stylesheet" href="https://unpkg.com/speedlify-score@1.0.2/speedlify-score.css" media="print" onload="this.media='all'">
-    <script src="https://unpkg.com/speedlify-score@1.0.2/speedlify-score.js" async defer></script>
+		<link rel="stylesheet" href="/css/speedlify-score.css">
     <title>{{ title }}</title>
   </head>
   <body>
