updated seo meta

--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -3,6 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta
+  name="Landing page of perezre"
+  content="My personal langding page
+          devided in four sections. 
+          The first section is a Feature.
+          The second section talks about me.
+          The third section shows my skillset.
+          The fourth section gives an overview of my own projects.
+          The fifth section are finally my study projects.
+          Thank you for visiting!">
     <link rel="stylesheet" href="/css/styles.css">
 		<link rel="stylesheet" href="/css/speedlify-score.css">
     <title>{{ title }}</title>
