updated seo meta

--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -6,7 +6,7 @@
     <meta
   name="Landing page of perezre"
   content="My personal langding page
-          devided in four sections. 
+          devided in five sections. 
           The first section is a Feature.
           The second section talks about me.
           The third section shows my skillset.
