--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta
-  name="Landing page of perezre"
+  name="description"
   content="My personal langding page
           devided in five sections. 
           The first section is a Feature.
